--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ blinker==1.9.0
 click==8.3.1
 colorama==0.4.6
 Flask==3.1.2
+flask-cors==6.0.2
 flask-marshmallow==1.4.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.3.1
